# worktale-cli

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  phase-2-cloud-post-launch-tasks.md  refresh-cloud-weeklies.cjs  seed-cloud-demo.cjs  seed-cloud-weeklies.cjs  seed-demo-ai-sessions.cjs  tsconfig.json  tsup.config.ts  unpublish-cloud-digests.cjs  vitest.config.ts
.claude/: settings.local.json
desktop/: build.bat  dev.bat  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
integrations/: cline-rules.md  cursor-rules.md  windsurf-rules.md
marketing/: .gitignore  blog.html  brand.html  contact.html  docs.html  index.html  lander-ai.html  lander-cloud.html  lander-freelance.html  lander-nda.html  lander-proof.html  lander-sprint.html  lander.html  marketing-feedback.txt  package-lock.json  package.json  plugin.html  pricing.html  privacy.html  terms.html  thanks.html  vite.config.js  worktale-alternatives.html  worktale-vs-activitywatch.html  worktale-vs-git-stats.html  worktale-vs-rescuetime.html  worktale-vs-wakatime.html  wrangler.json
scripts/: pre-pr-check.sh
src/: cli.ts
university/: advanced-cli.html  ai-sessions.html  cloud.html  daily-practice.html  desktop.html  foundations.html  index.html  mastery.html  package-lock.json  package.json  reference.html  vite.config.js  wrangler.json
worktale-copilot-plugin/: README.md  plugin.json
worktale-plugin/: README.md
(+146 files in other folders)
