[package]
name = "worktale-desktop"
version = "1.4.1"
description = "Worktale Desktop — Your dev story, beautifully told"
authors = ["George Rios"]
edition = "2021"

[lib]
name = "worktale_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
